testdata/baselines/reference/submodule/compiler/declarationEmitRedundantTripleSlashModuleAugmentation.errors.txt
/index.ts(1,20): error TS2305: Module '"foo"' has no exported member 'Augmentation'.


==== /node_modules/foo/index.d.ts (0 errors) ====
    declare module "foo" {
        export interface Original {}
    }
    
==== /augmentation.ts (0 errors) ====
    export interface FooOptions {}
    declare module "foo" {
        export interface Augmentation {}
    }
    
==== /index.ts (1 errors) ====
    import { Original, Augmentation } from "foo";
                       ~~~~~~~~~~~~
!!! error TS2305: Module '"foo"' has no exported member 'Augmentation'.
    import type { FooOptions } from "./augmentation";
    export interface _ {
        original: Original;
        augmentation: Augmentation;
        options: FooOptions;
    }
    